--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="shortcut icon" href="./favicon.ico" />
+    <!-- <link rel="shortcut icon" href="./favicon.ico" /> -->
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Record Bin</title>
   </head>
